[package]
name = "pcie_mem_test"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9"
tempfile = "3"

[profile.test]
opt-level = 3

[profile.release]
#options to minimize binary size
panic = 'abort'     # Abort on panic, no stack unwinding
lto = true          # Enable Link Time Optimization
strip = true
